# Algorithm-for-ICPC

./: .gitignore  ACM代码.md  ACM模板.md  ACM模板代码.md  README.md  acm.txt  href.md
binary_search/: CMakeLists.txt
bitmask/: CMakeLists.txt  cf1325d.cpp
computational_geometry/: CMakeLists.txt  ccpc_jilin_e.cpp  niuke_opeartion_love.cpp  poj3301.cpp  poj3315.cpp  poj3327.cpp
data_structure/: CMakeLists.txt
data_structure/mono_stack/: cf1407d.cpp  luogu4147.cpp
data_structure/segment_tree/: CMakeLists.txt  hdu1166  hdu1166.c  hdu1166.cpp  luogu3372.cpp  niuke_classical_string_problem.cpp  poj3264  poj3264.c  sement_tree.md
data_structure/sparse_table/: CMakeLists.txt  hdu3183.c
data_structure/tree_like_array/: CMakeLists.txt  loj130.cpp  poj2352.cpp
data_structure/union_find/: CMakeLists.txt  luogu1111.cpp
discretization/: discretization.cpp
dynamic_programming/: CMakeLists.txt  HDU1176.cpp  HDU2084_num_triangle.cpp  HDU2084_number_triangle.py  POJ1050.cpp  POJ1159.cpp  POJ1221.cpp  cf1324e.cpp  cf1350b.cpp  cf1383b.cpp  dp例题.md  nowcoder_two_matchings.cpp  poj1384.cpp  poj1458.cpp
dynamic_programming/LPS/: CMakeLists.txt  leetcode516.c
dynamic_programming/digit_dp/: CMakeLists.txt  keller_str2.cpp  keller_string.cpp
dynamic_programming/fundmental/: homework.c
dynamic_programming/fundmental/lcs/: 51nod1006.c  CMakeLists.txt  a.txt  b.txt  cf1257e.cpp  cf1257e2.cpp  diff.py  hdu1159.c
dynamic_programming/interval_dp/: CMakeLists.txt  luogu1430.c  luogu4170.c  区间dp.md
dynamic_programming/longest_decreasing_subsequence/: HDU1069.cpp
dynamic_programming/sc_dp/: CMakeLists.txt  cf1316.c  loj2513.cpp
dynamic_programming/tree_like_dp/: CMakeLists.txt  cf1422e.cpp  luogu1352.cpp  luogup1122.cpp
dynamic_programming/zero_one_pack/: CMakeLists.txt  POJ1837.java  luogu1060.c  luogu1064.c  luogu1164.c
dynamic_programming/最长回文子串/: CMakeLists.txt  leetcode5.cpp
exercise/: CMakeLists.txt  a.cpp  a1.c  a1.cpp  a2.cpp  b1.cpp  bsearch.c  c.cpp  c1.c  ccpc_jilin_f.cpp  ccpc_jilin_g.cpp  ccpc_jilin_i.cpp  ccpc_jilin_k.cpp  cf1424g.cpp  cf1492a.cpp  code_gen.cpp  d.cpp  e.c  e1.cpp  f.cpp  f2.cpp  g.cpp  g1.c  gg.cpp  j.cpp  nanchang_e.cpp  nanchang_e2.cpp  nanchang_g.cpp  noip.cpp  problem.c  problem2.c  problem2_2.c  random.c  test.c  test.cpp  tsp.c
exercise/ccpc2020_changchun/: CMakeLists.txt  a.cpp  d.cpp
exercise/ccpc2020_weihai/: CMakeLists.txt  a.cpp  c.cpp  d.cpp  h.cpp  l.cpp
exercise/cf/: CMakeLists.txt
exercise/ecfinal_2019/: CMakeLists.txt  a.cpp  e.cpp  h.cpp  h2.cpp  m.cpp
exercise/holiday/: CMakeLists.txt  a.cpp  b.cpp  b2.cpp  d.cpp  gym100971k.cpp  h.cpp  j.cpp  poj1103.cpp  poj1513.cpp  poj1692.cpp  poj1771.cpp
exercise/holiday_exam/: CMakeLists.txt  a.cpp  b.cpp  d.cpp  d2.cpp  e.cpp  f.cpp  fib.cpp  g.cpp  h.cpp  h2.cpp  j.cpp  test.cpp
exercise/hongkong_icpc_2019/: CMakeLists.txt  b.cpp  d.cpp
exercise/icpc2019_taipei/: CMakeLists.txt  c.cpp
exercise/icpc_2019shanghai/: CMakeLists.txt  b.cpp
exercise/leetcode/: 3sum.cpp  4sum.cpp  CMakeLists.txt  array-of-doubled-pairs.cpp  swap-nodes-in-pairs.cpp
exercise/multi_university/: CMakeLists.txt  a.cpp  b.cpp  b2.cpp  c.cpp  e.cpp  ep.cpp  f.cpp  fknews.cpp  ground_chashing_death.cpp  groundhog.cpp  h.cpp  interesting_com2.cpp  interesting_computer_game.cpp  k.cpp  kalabo2.cpp  temp.py  tournament.cpp
exercise/vj/: CMakeLists.txt  a.cpp  b.c  c.cpp  d.cpp  f.py  h.cpp  l.cpp
exercise/xi_an_nowcoder/: CMakeLists.txt
graph_theory/: CMakeLists.txt
graph_theory/Minimum_Spanning_Tree/: CMakeLists.txt  edmonds-karp1.cpp  edmonds-karp_2.cpp  kruskal_1.cpp  luogu3366.cpp  poj2421.c  prim_1.cpp  prim_2.c
graph_theory/bellman/: CMakeLists.txt  bellman.c  luogup1993.cpp  luogup3371.cpp  luogup3385.cpp  poj2394  poj2394.cpp  spfa.cpp
graph_theory/bfs/: CMakeLists.txt  cf1301f.cpp
graph_theory/bigraph/: CMakeLists.txt  cf13542.cpp  cf1354e.cpp  hdu2063.cpp
graph_theory/dfs/: CMakeLists.txt  c2.cpp  selective_course.cpp
graph_theory/dijkstra/: CMakeLists.txt  HDU2544.cpp  HDU2544_priority_queue.cpp  Main.java  PTA1003.cpp  hdu2544_nlogn.cpp
graph_theory/floyd/: CMakeLists.txt  floyd_1.c  hdu2544.cpp
graph_theory/network_flow/: CMakeLists.txt  luogup3376.cpp  poj3281.cpp
graph_theory/spfa/: luogu3371.cpp
graph_theory/topo_sort/: CMakeLists.txt  POJ1094.cpp
graph_theory/topological_sort/: POJ1094.cpp  POJ2367  topo.cpp
graph_theory/tree/: CMakeLists.txt  cf1325c.cpp
graph_theory/tree/centroid/: problem1.cpp  problem1_1.cpp  std.cpp
graph_theory/tree/chain_split/: icpc2019shanghai_f.cpp  luogu3384.cpp
graph_theory/tree/count_edge/: CMakeLists.txt  cf1401d.cpp  cf1401d2.cpp
graph_theory/tree/dsu/: a.c  cf600e.cpp  luoguU41492.cpp
graph_theory/tree/lca/: p3379.cpp
greedy/: CMakeLists.txt  cf1393.cpp
mathmatic/: CMakeLists.txt  hdu3286.cpp  hdu3792.cpp  hdu5584.cpp  hdu6069.cpp  modulo.cpp  ploy.c  yinchuan_f.cpp
mathmatic/combinatorics/: cf1422c.cpp
mathmatic/fast_pow/: JiangSu2018_I.cpp  fast_pow.cpp  matrix_fast_pow.cpp
mathmatic/game/: cf1396b.cpp
mathmatic/number_theory/: CMakeLists.txt  Gcd.java  Sieve.java  cf1366d.cpp  exgcd.c  gcd_1.cpp  gcd_combine.c  harmonic_number.c  hdu1576.cpp  hdu5656.cpp  hdu5976.cpp  lcm.c  modulo_1.c  modulo_2.c  note.md
mathmatic/number_theory/fast_pow_mod/: FastPow.java
mathmatic/number_theory/modulo_calculation/: module_calculation.md
mathmatic/number_theory/prime_factor/: nanjing2018j2.cpp
mathmatic/recursion/: JiangSu2018_J.md  Main.java
priority_queue/: POJ2431.cpp
search/bfs/: catch_that_cow.cpp  cola.cpp  fire.cpp  maze.cpp  prime_path.cpp  test1_a.cpp  three_d.cpp
search/dfs/: POJ2531.java  chess_board.cpp  eight_queen.cpp  (+4 more)
sort/: CMakeLists.txt  quick_sort.cpp
string/: CMakeLists.txt  字符串.md
string/basic/: POJ1035.c
string/palindrome/: CMakeLists.txt
string/string_matching/: kmp.c  kmp_algorithm.md
string/trie_tree/: acwing144.cpp  hdu1251.cpp  hdu1251_linked_list.cpp  nowcoder15706.c  nowcoder15706_2.c
union_find/: CMakeLists.txt  hdu1232.c  luogu1111.cpp  luogu_p3367.cpp
(+4 files in other folders)
