CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(data_structure)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 20)

add_executable(xuzhou_ol_easy xuzhou_ol_so_easy.cpp)
add_executable(cf1407d mono_stack/cf1407d.cpp)
add_executable(cf1466d1 cf1466d1.cpp)
add_executable(luogup4147 mono_stack/luogu4147.cpp)
