CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(dynamic_programming)

ADD_EXECUTABLE(cf1324e.cpp cf1324e.cpp)
add_executable(hdu HDU2084_num_triangle.cpp)
add_executable(nowcoder_two_matchings nowcoder_two_matchings.cpp)
add_executable(poj1384 poj1384.cpp)
add_executable(poj1458 poj1458.cpp)
add_executable(cf1350b cf1350b.cpp)
add_executable(cf1383b cf1383b.cpp)
add_executable(yinchuan_k yinchuan_k.cpp)