CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(exercise)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_C_FLAGS -pthread)

add_executable(a1 a1.cpp)
add_executable(j.cpp j.cpp)
add_executable(test.c test.c)
add_executable(e.c e.c)
add_executable(problem.c problem.c)
add_executable(problem2.c problem2.c)
add_executable(problem2_2.c problem2_2.c)
add_executable(random.c random.c)
add_executable(bsearch.c bsearch.c)
add_executable(g g.cpp)
add_executable(a.cpp a.cpp)
add_executable(f.cpp f.cpp)
add_executable(c.cpp c.cpp)
add_executable(d.cpp d.cpp)
add_executable(gg.cpp gg.cpp)
add_executable(g1 g1.c)
add_executable(c1 c1.c)
add_executable(b1 b1.cpp)
add_executable(e1 e1.cpp)
add_executable(f2 f2.cpp)
add_executable(tsp tsp.c)
add_executable(nanchang_l nanchang_l.cpp)