CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(exercise)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_C_FLAGS -pthread)

add_executable(a1 a1.cpp)
add_executable(j.cpp j.cpp)
add_executable(test.c test.c)
add_executable(e.c e.c)
add_executable(problem.c problem.c)
add_executable(problem2.c problem2.c)
add_executable(problem2_2.c problem2_2.c)
add_executable(random.c random.c)
add_executable(bsearch.c bsearch.c)
add_executable(g g.cpp)
add_executable(a.cpp a.cpp)
add_executable(f.cpp f.cpp)
add_executable(c.cpp c.cpp)
add_executable(d.cpp d.cpp)
add_executable(gg.cpp gg.cpp)
add_executable(g1 g1.c)
add_executable(c1 c1.c)
add_executable(b1 b1.cpp)
add_executable(e1 e1.cpp)
add_executable(f2 f2.cpp)
add_executable(tsp tsp.c)
add_executable(noip noip.cpp)
add_executable(nanchang_l nanchang_l.cpp)
add_executable(ccpc2019f ccpc2019f.cpp)
add_executable(ccpcreports ccpcreports.cpp)
add_executable(ccpc1003 ccpc1003.cpp)
add_executable(ccpcconv ccpcconv.cpp)
add_executable(ccpclunch ccpclunch.cpp)
add_executable(ccpctheive ccpctheive.cpp)
add_executable(nanchang_e nanchang_e.cpp)
add_executable(nanchang_e2 nanchang_e2.cpp)
add_executable(nanchang_g nanchang_g.cpp)
add_executable(ccpc_jilin_g ccpc_jilin_g.cpp)
add_executable(ccpc_jilin_f ccpc_jilin_f.cpp)
add_executable(ccpc_jilin_i ccpc_jilin_i.cpp)
add_executable(ccpc_jilin_k ccpc_jilin_k.cpp)
add_executable(ccpc2020qingdao_a ccpc2020qingdao_a.cpp)
add_executable(ccpc_2020qingdao_c ccpc_2020qingdao_c.cpp)
add_executable(test2 test.cpp )
add_executable(cf1424g cf1424g.cpp)