CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(holiday_exam)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)

add_executable(fib fib.cpp)
add_executable(g g.cpp)
add_executable(a a.cpp)
add_executable(b b.cpp)
add_executable(d d.cpp)
add_executable(d2 d2.cpp)
add_executable(e e.cpp)
add_executable(h h.cpp)
add_executable(f f.cpp)
add_executable(j j.cpp)
add_executable(h2 h2.cpp)
add_executable(test test.cpp)