CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(leetcode)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 20)

add_executable(3sum.cpp 3sum)
add_executable(find-leaves-of-binary-tree.cpp find-leaves-of-binary-tree)
add_executable(binary-tree-postorder-traversal.cpp binary-tree-postorder-traversal)
add_executable(4sum.cpp 4sum)
add_executable(array-of-doubled-pairs.cpp array-of-doubled-pairs)
add_executable(bus-routes.cpp bus-routes)
add_executable(sum-of-distances-in-tree.cpp sum-of-distances-in-tree)
add_executable(super-egg-drop.cpp super-egg-drop)