CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

PROJECT(multi_university)
SET(CMAKE_C_STANDARD 11)
SET(CMAKE_CXX_STANDARD 17)

add_executable(h.cpp h)
add_executable(b.cpp b)
add_executable(c.cpp c)
add_executable(k.cpp k)
add_executable(b2 b2.cpp)
add_executable(fknews fknews.cpp)
add_executable(interesting_computer_game interesting_computer_game.cpp)
add_executable(interesting_com2 interesting_com2.cpp)
add_executable(kalabo2 kalabo2.cpp)
add_executable(ep ep.cpp)
add_executable(groundhog groundhog.cpp)
add_executable(f f.cpp)
add_executable(ground_chashing_death ground_chashing_death.cpp)
add_executable(heyawake heyawake.cpp)
add_executable(a a.cpp)
add_executable(tournament tournament.cpp)