CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(tree)
set(CMAKE_CXX_STANDARD 20)

add_executable(cf1325c cf1325c.cpp)
add_executable(kill_the_tree kill_the_tree.cpp)
add_executable(poj1655 poj1655.cpp)
add_executable(cf1404 cf1404.cpp)
add_executable(cf1406c cf1406c.cpp)
add_executable(ccpc_2020_qinhuangdao_k ccpc_2020_qinhuangdao_k.cpp)
add_executable(cf600e dsu/cf600e.cpp)
add_executable(p3379 lca/p3379.cpp)
add_executable(luogu3384 chain_split/luogu3384.cpp)
add_executable(luoguU41492 dsu/luoguU41492.cpp)
add_executable(a dsu/a.c)
add_executable(problem1 centroid/problem1.cpp)
add_executable(problem1_1 centroid/problem1_1.cpp)
add_executable(icpc2019shanghai_f chain_split/icpc2019shanghai_f.cpp)