CMAKE_MINIMUM_REQUIRED(VERSION 3.15)

PROJECT(number_theory)

ADD_EXECUTABLE(hdu1576 hdu1576.cpp)
add_executable(hdu5656 hdu5656.cpp)
add_executable(hdu5976 hdu5976.cpp)
add_executable(cf1366d cf1366d.cpp)
add_executable(pollard_rho pollard_rho.cpp)
add_executable(pollard_rho2 pollard_rho2.cpp)
add_executable(xuzhou_multiply xuzhou_multiply.cpp)
add_executable(poj1835 luogup1835.cpp)
add_executable(lt3_numbers lt3_numbers.cpp)
add_executable(luogup3807 Lucas/luogup3807.cpp)
add_executable(euler_thieve euler_thieve.cpp)
add_executable(nanjing2018j prime_factor/nanjing2018j.cpp)
add_executable(nanjing2018j2 prime_factor/nanjing2018j2.cpp)